Corrindo erros do banco novo
